# irods-sudo-microservices

./: .gitignore  CMakeLists.txt  LICENSE  README.md  policies.re  test.r
CMakeModules/: FindLohmannJSON.cmake
package/: changelog.txt  description.txt  postinst.sh
src/: common.cc  common.hh  irods_includes.hh  msiSudoGroupAdd.cc  msiSudoGroupMemberAdd.cc  msiSudoGroupMemberRemove.cc  msiSudoGroupRemove.cc  msiSudoObjAclSet.cc  msiSudoObjMetaAdd.cc  msiSudoObjMetaRemove.cc  msiSudoObjMetaSet.cc  msiSudoUserAdd.cc  msiSudoUserRemove.cc
